--- a/productcategoy.html
+++ b/productcategoy.html
@@ -80,8 +80,7 @@
 
 
 
-<!--Auto top scroll button-->
-<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="las la-angle-double-up"></i></button>
+
 
  <!--footer start-->
 <div>
@@ -113,10 +112,9 @@
       </div>
       <center>
         <div class="media">
-          <a href="#"><i class="bi bi-facebook " style="font-size: 30px; margin: 10px;"></i></a>
-          <a href="#"><i class="bi bi-instagram" style="font-size: 30px; margin: 10px;"></i></a>
-          <a href="#"><i class="bi bi-whatsapp" style="font-size: 30px; margin: 10px;"></i></a>
-          <a href="#"><i class="bi bi-linkedin" style="font-size: 30px; margin: 10px;"></i></a>
+          <a href="https://www.facebook.com/"><i class="bi bi-facebook " style="font-size: 30px; margin: 10px;"></i></a>
+          <a href="https://www.instagram.com/"><i class="bi bi-instagram" style="font-size: 30px; margin: 10px;"></i></a>
+          <a href="https://www.linkedin.com/"><i class="bi bi-linkedin" style="font-size: 30px; margin: 10px;"></i></a>
         </div>
       </center>
       </div>
@@ -140,7 +138,7 @@
         { category:"mens",name: " Tan Taupe", image: "tanm2.jpg" },
         {category:"mens", name: " Tan Coral", image: "tanm3.jpg" },
         { category:"mens",name: " Tan Orange", image: "tanm4.jpg" },
-        { category:"mens",name: " Tan Orange", image: "tanm6.jpg" },
+        { category:"mens",name: " Tan Green", image: "tanm5.jpg" },
         { category:"mens",name: "Dark skintone", image:"dark1.jpg" },
         { category:"mens",name: "Dark lilac", image: "dark2.jpg" },
         { category:"mens",name: "Dark sliver", image: "dark3.jpg" },
