--- a/chatbot.html
+++ b/chatbot.html
@@ -59,7 +59,7 @@
 
   <div>
     <div id="chatbot">
-              <iframe src=''  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe> 
+      <iframe src=''  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe> 
     </div>
     <div>
       <!-- Add an ID to the button for easy access in JavaScript -->
@@ -109,10 +109,9 @@
     </div>
     <center>
       <div class="media">
-        <a href="#"><i class="bi bi-facebook " style="font-size: 30px; margin: 10px;"></i></a>
-        <a href="#"><i class="bi bi-instagram" style="font-size: 30px; margin: 10px;"></i></a>
-        <a href="#"><i class="bi bi-whatsapp" style="font-size: 30px; margin: 10px;"></i></a>
-        <a href="#"><i class="bi bi-linkedin" style="font-size: 30px; margin: 10px;"></i></a>
+        <a href="https://www.facebook.com/"><i class="bi bi-facebook " style="font-size: 30px; margin: 10px;"></i></a>
+          <a href="https://www.instagram.com/"><i class="bi bi-instagram" style="font-size: 30px; margin: 10px;"></i></a>
+          <a href="https://www.linkedin.com/"><i class="bi bi-linkedin" style="font-size: 30px; margin: 10px;"></i></a>
       </div>
     </center>
     </div>
