--- a/index.html
+++ b/index.html
@@ -159,10 +159,9 @@
     </div>
     <center>
       <div class="media">
-        <a href="#"><i class="bi bi-facebook " style="font-size: 30px; margin: 10px;"></i></a>
-        <a href="#"><i class="bi bi-instagram" style="font-size: 30px; margin: 10px;"></i></a>
-        <a href="#"><i class="bi bi-whatsapp" style="font-size: 30px; margin: 10px;"></i></a>
-        <a href="#"><i class="bi bi-linkedin" style="font-size: 30px; margin: 10px;"></i></a>
+        <a href="https://www.facebook.com/"><i class="bi bi-facebook " style="font-size: 30px; margin: 10px;"></i></a>
+        <a href="https://www.instagram.com/"><i class="bi bi-instagram" style="font-size: 30px; margin: 10px;"></i></a>
+        <a href="https://www.linkedin.com/"><i class="bi bi-linkedin" style="font-size: 30px; margin: 10px;"></i></a>
       </div>
     </center>
     
